force-app/main/default/objects/FEC_Relevant_Ticket__c/FEC_Relevant_Ticket__c.object-meta.xml
<CustomObject>
    <label>Relevant Ticket</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relevant Tickets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>