force-app/main/default/objects/FEC_Relevant_Ticket__c/fields/FE_Categor_Relevant__c.field-meta.xml
<CustomField>
    <fullName>FE_Categor_Relevant__c</fullName>
    <formula>FEC_Related_To__r.FEC_Category__r.FEC_Name_VN__c</formula>
    <label>Category</label>
    <type>Text</type>
</CustomField>