force-app/main/default/objects/FEC_Relevant_Ticket__c/fields/FEC_Account_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Account_Contract_Number__c</fullName>
    <description>Số tài khoản/ hợp đồng gắn với Case (nếu có)</description>
    <label>Account/ Contract Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>