force-app/main/default/objects/FEC_Relevant_Ticket__c/fields/FEC_Account_or_Contract_Revelant__c.field-meta.xml
<CustomField>
    <fullName>FEC_Account_or_Contract_Revelant__c</fullName>
    <formula>FEC_Related_To__r.FEC_Account_or_Contract__r.FEC_Account_Number__c</formula>
    <label>Account/Contract Number</label>
    <type>Text</type>
</CustomField>