force-app/main/default/objects/FEC_Relevant_Ticket__c/fields/FEC_Interaction__c.field-meta.xml
<CustomField>
    <fullName>FEC_Interaction__c</fullName>
    <label>Interaction</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Relevant Tickets</relationshipLabel>
    <relationshipName>Relevant_Tickets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>