force-app/main/default/objects/FEC_Relevant_Ticket__c/fields/FEC_Related_To__c.field-meta.xml
<CustomField>
    <fullName>FEC_Related_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related to</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Relevant Tickets (Related to)</relationshipLabel>
    <relationshipName>CaseRelatedList</relationshipName>
    <type>Lookup</type>
</CustomField>