force-app/main/default/objects/FEC_Relevant_Ticket__c/fields/FEC_Relevant_Ticket_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Relevant_Ticket_ID__c</fullName>
    <formula>FEC_Related_To__r.FEC_Link_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relevant Ticket ID</label>
    <type>Text</type>
</CustomField>