force-app/main/default/objects/FEC_Relevant_Ticket__c/fields/FEC_Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Stage_Name__c</fullName>
    <description>Teen stage tại thời điểm link ticket</description>
    <label>Stage Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>