force-app/main/default/objects/FEC_Relevant_Ticket__c/fields/FEC_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Status__c</fullName>
    <formula>FEC_Related_To__r.FEC_Final_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>