force-app/main/default/objects/FEC_Relevant_Ticket__c/fields/FEC_Status_Relevant__c.field-meta.xml
<CustomField>
    <fullName>FEC_Status_Relevant__c</fullName>
    <description>Trạng thái của Interaction/ Case:
- Nếu ID là Interaction thì hiển thị giá trị Interaction Status
- Nếu ID là Case thì hiển thị giá trị Case Status</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>