force-app/main/default/objects/FEC_Relevant_Ticket__c/fields/FEC_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>FEC_Sub_Category__c</fullName>
    <description>Thông tin lấy từ Case (nếu có)</description>
    <label>Sub Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>