force-app/main/default/objects/FEC_Relevant_Ticket__c/fields/FEC_Sub_Category_Relevant__c.field-meta.xml
<CustomField>
    <fullName>FEC_Sub_Category_Relevant__c</fullName>
    <formula>FEC_Related_To__r.FEC_SubCategory__r.FEC_Name_VN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Category</label>
    <type>Text</type>
</CustomField>