force-app/main/default/objects/FEC_Relevant_Ticket__c/fields/FEC_Sub_Code_Relevant__c.field-meta.xml
<CustomField>
    <fullName>FEC_Sub_Code_Relevant__c</fullName>
    <formula>FEC_Related_To__r.FEC_SubCode__r.FEC_Name_VN__c</formula>
    <label>Sub Code</label>
    <type>Text</type>
</CustomField>