force-app/main/default/objects/FEC_Relevant_Ticket__c/fields/FEC_User__c.field-meta.xml
<CustomField>
    <fullName>FEC_User__c</fullName>
    <description>Người thực hiện liên kết ticket</description>
    <label>User</label>
    <length>80</length>
    <type>Text</type>
</CustomField>