force-app/main/default/objects/FEC_Relevant_Ticket__c/fields/FEC_User_Relevant__c.field-meta.xml
<CustomField>
    <fullName>FEC_User_Relevant__c</fullName>
    <formula>FEC_Related_To__r.Owner:User.Alias</formula>
    <label>User</label>
    <type>Text</type>
</CustomField>