force-app/main/default/objects/FEC_Relevant_Ticket__c/fields/FEC_User_Role__c.field-meta.xml
<CustomField>
    <fullName>FEC_User_Role__c</fullName>
    <description>Role hệ thống của người thực hiện liên kết ticket</description>
    <label>User Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>